# credit_card_recom

./: README.md  pyproject.toml
.cursor/: mcp.json
CTBC_Data/: ALL_ME卡.json  ANA聯名卡.json  Agoda聯名卡.json  Global_Mall聯名卡.json  LEXUS聯名卡.json  LINE_Pay信用卡.json  Mitsui_Shopping_Park_LaLaport聯名卡.json  Super_Life_VISA卡.json  TAIPEI_101聯名卡.json  Yahoo聯名卡.json  card_features.json  channels.json  ctbc_cards.json  foodpanda聯名卡.json  iPlan卡.json  microsite_deals.json  promotions.json  uniopen聯名卡.json  中信兄弟聯名卡.json  中信商務卡_雙幣商務卡.json  中信商旅鈦金卡.json  中信現金回饋御璽卡.json  中信現金回饋鈦金卡.json  中信紅利卡.json  中信紅利御璽卡.json  中信紅利晶緻卡.json  中信鼎極卡.json  中油聯名卡.json  中華航空聯名卡.json  中華電信聯名卡.json  享想生活卡.json  分期紅利卡.json  勤美天地聯名卡.json  南紡購物中心聯名卡.json  和泰聯名卡.json  商旅卡.json  大中華攜手飛聯名卡.json  大葉高島屋百貨聯名卡.json  學學認同卡.json  家扶認同卡.json  (+12 more)
src/credit_card_recom_mcp/: __init__.py  ctbc_data.py  http_server.py  remote_bridge.py  server.py
src/credit_card_recom_mcp/data/: baseline_rules.json
tests/: test_server.py
tests/fixtures/ctbc_data/: card_features.json  channels.json  ctbc_cards.json  microsite_deals.json
