[project]
name = "credit-card-recom-mcp"
version = "0.1.0"
description = "Minimal MCP server for credit card reward recommendation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=1,<2",
]

[project.scripts]
credit-card-recommendation-server = "credit_card_recom_mcp.server:main"
credit-card-recommendation-http-server = "credit_card_recom_mcp.server:main_http"
credit-card-recommendation-remote-bridge = "credit_card_recom_mcp.remote_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_card_recom_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/credit_card_recom_mcp/data" = "credit_card_recom_mcp/data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
